reorganize the project to script
- turned cohort part of notebooks into script

--- a/notebooks/bds.ipynb
+++ b/notebooks/bds.ipynb
@@ -13,45 +13,11 @@
    "execution_count": 1,
    "id": "8eaf1151",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style type='text/css'>\n",
-       ".datatable table.frame { margin-bottom: 0; }\n",
-       ".datatable table.frame thead { border-bottom: none; }\n",
-       ".datatable table.frame tr.coltypes td {  color: #FFFFFF;  line-height: 6px;  padding: 0 0.5em;}\n",
-       ".datatable .bool    { background: #DDDD99; }\n",
-       ".datatable .object  { background: #565656; }\n",
-       ".datatable .int     { background: #5D9E5D; }\n",
-       ".datatable .float   { background: #4040CC; }\n",
-       ".datatable .str     { background: #CC4040; }\n",
-       ".datatable .time    { background: #40CC40; }\n",
-       ".datatable .row_index {  background: var(--jp-border-color3);  border-right: 1px solid var(--jp-border-color0);  color: var(--jp-ui-font-color3);  font-size: 9px;}\n",
-       ".datatable .frame tbody td { text-align: left; }\n",
-       ".datatable .frame tr.coltypes .row_index {  background: var(--jp-border-color0);}\n",
-       ".datatable th:nth-child(2) { padding-left: 12px; }\n",
-       ".datatable .hellipsis {  color: var(--jp-cell-editor-border-color);}\n",
-       ".datatable .vellipsis {  background: var(--jp-layout-color0);  color: var(--jp-cell-editor-border-color);}\n",
-       ".datatable .na {  color: var(--jp-cell-editor-border-color);  font-size: 80%;}\n",
-       ".datatable .sp {  opacity: 0.25;}\n",
-       ".datatable .footer { font-size: 9px; }\n",
-       ".datatable .frame_dimensions {  background: var(--jp-border-color3);  border-top: 1px solid var(--jp-border-color0);  color: var(--jp-ui-font-color3);  display: inline-block;  opacity: 0.6;  padding: 1px 10px 1px 5px;}\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# library\n",
     "import os \n",
     "import pandas as pd\n",
-    "import datatable as dt\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt # plot\n",
     "import plotly.express as px # geographic plot\n",
@@ -61,7 +27,8 @@
     "from stargazer.stargazer import Stargazer # latex table\n",
     "import itertools # iteration pool\n",
     "from linearmodels.panel import PanelOLS\n",
-    "from IPython.display import display, Markdown\n"
+    "import lxml\n",
+    "from tabulate import tabulate\n"
    ]
   },
   {
@@ -2244,14 +2211,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\zach_\\anaconda3\\lib\\site-packages\\pandas\\core\\arraylike.py:364: RuntimeWarning:\n",
+      "c:\\Users\\zach_\\.virtualenvs\\RFE_project-5yjSZlxr\\lib\\site-packages\\pandas\\core\\arraylike.py:397: RuntimeWarning:\n",
+      "\n",
+      "divide by zero encountered in log\n",
+      "\n",
+      "c:\\Users\\zach_\\.virtualenvs\\RFE_project-5yjSZlxr\\lib\\site-packages\\pandas\\core\\arraylike.py:397: RuntimeWarning:\n",
+      "\n",
+      "divide by zero encountered in log\n",
+      "\n",
+      "c:\\Users\\zach_\\.virtualenvs\\RFE_project-5yjSZlxr\\lib\\site-packages\\pandas\\core\\arraylike.py:397: RuntimeWarning:\n",
       "\n",
       "divide by zero encountered in log\n",
       "\n"
@@ -2325,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 4,
    "id": "b77a4b1e",
    "metadata": {},
    "outputs": [],
@@ -2370,7 +2345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "id": "25b84c12",
    "metadata": {},
    "outputs": [
@@ -2382,7 +2357,7 @@
        "       'l) Left Censored'], dtype=object)"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2403,10 +2378,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 25,
    "id": "cc1d4be5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    results_as_html = res.summary.tables[1].as_html()\\n    results_table = pd.read_html(results_as_html, header=0, index_col=0)[0]\\n    file_name_curr = f\"reg_{naics_curr}\"\\n'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results_dict_1 = dict()\n",
     "for naics_curr in range(2, 5):\n",
@@ -2425,45 +2411,74 @@
     "    res = mod.fit(cov_type = 'heteroskedastic')\n",
     "\n",
     "    # results\n",
+    "    file_name_curr = f\"reg_{naics_curr}\"\n",
+    "    results_dict_1[file_name_curr] =  res.summary\n",
+    "\n",
+    "\"\"\"\n",
     "    results_as_html = res.summary.tables[1].as_html()\n",
     "    results_table = pd.read_html(results_as_html, header=0, index_col=0)[0]\n",
     "    file_name_curr = f\"reg_{naics_curr}\"\n",
-    "    results_dict_1[file_name_curr] = results_table\n"
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "49123a5b",
+   "execution_count": 36,
+   "id": "3d94ff3c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                            Parameter  Std. Err.  T-stat  P-value  Lower CI  \\\n",
-      "C(age_grp_dummy)[T.1.0]        0.2039     0.0484  4.2171   0.0000    0.1091   \n",
-      "C(age_grp_dummy)[T.2.0]        0.1213     0.0484  2.5044   0.0123    0.0264   \n",
-      "C(age_grp_dummy)[T.3.0]        0.0894     0.0484  1.8469   0.0648   -0.0055   \n",
-      "C(age_grp_dummy)[T.4.0]        0.0699     0.0485  1.4412   0.1495   -0.0252   \n",
-      "C(age_grp_dummy)[T.5.0]        0.0564     0.0485  1.1617   0.2454   -0.0387   \n",
-      "log_restriction_2_2            0.0289     0.0055  5.2323   0.0000    0.0181   \n",
-      "log_restriction_2_2_cohort    -0.0239     0.0062 -3.8599   0.0001   -0.0360   \n",
-      "\n",
-      "                            Upper CI  \n",
-      "C(age_grp_dummy)[T.1.0]       0.2987  \n",
-      "C(age_grp_dummy)[T.2.0]       0.2163  \n",
-      "C(age_grp_dummy)[T.3.0]       0.1843  \n",
-      "C(age_grp_dummy)[T.4.0]       0.1649  \n",
-      "C(age_grp_dummy)[T.5.0]       0.1515  \n",
-      "log_restriction_2_2           0.0398  \n",
-      "log_restriction_2_2_cohort   -0.0117  \n"
-     ]
+     "data": {
+      "text/plain": [
+       "'                     PanelOLS Estimation Summary                     \\nDep. Variable:   ,death_rate_age  ,  R-squared:           ,0.2595    \\nEstimator:       ,PanelOLS        ,  R-squared (Between): ,0.0405    \\nNo. Observations:,27205           ,  R-squared (Within):  ,0.2597    \\nDate:            ,Wed, May 25 2022,  R-squared (Overall): ,0.2325    \\nTime:            ,17:04:07        ,  Log-likelihood       ,2.848e+04 \\nCov. Estimator:  ,Robust          ,                       ,          \\n                 ,                ,  F-statistic:         ,1576.8    \\nEntities:        ,262             ,  P-value              ,0.0000    \\nAvg Obs:         ,103.84          ,  Distribution:        ,F(6,26997)\\nMin Obs:         ,0.0000          ,                       ,          \\nMax Obs:         ,180.00          ,  F-statistic (robust):,1185.8    \\n                 ,                ,  P-value              ,0.0000    \\nTime periods:    ,38              ,  Distribution:        ,F(6,26997)\\nAvg Obs:         ,715.92          ,                       ,          \\nMin Obs:         ,148.00          ,                       ,          \\nMax Obs:         ,1526.0          ,                       ,          \\n                 ,                ,                       ,          \\n                              Parameter Estimates                               \\n                          ,Parameter,Std. Err., T-stat,P-value,Lower CI,Upper CI\\nC(age_grp_dummy)[T.1.0]   ,0.2039   ,0.0484   ,4.2171 ,0.0000 ,0.1091  ,0.2987  \\nC(age_grp_dummy)[T.2.0]   ,0.1213   ,0.0484   ,2.5044 ,0.0123 ,0.0264  ,0.2163  \\nC(age_grp_dummy)[T.3.0]   ,0.0894   ,0.0484   ,1.8469 ,0.0648 ,-0.0055 ,0.1843  \\nC(age_grp_dummy)[T.4.0]   ,0.0699   ,0.0485   ,1.4412 ,0.1495 ,-0.0252 ,0.1649  \\nC(age_grp_dummy)[T.5.0]   ,0.0564   ,0.0485   ,1.1617 ,0.2454 ,-0.0387 ,0.1515  \\nlog_restriction_2_2       ,0.0289   ,0.0055   ,5.2323 ,0.0000 ,0.0181  ,0.0398  \\nlog_restriction_2_2_cohort,-0.0239  ,0.0062   ,-3.8599,0.0001 ,-0.0360 ,-0.0117 \\n\\nF-test for Poolability: 33.415\\nP-value: 0.0000\\nDistribution: F(201,26997)\\n\\nIncluded effects: Entity, Time'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(results_dict_1['reg_2'])"
+    "results_dict_1['reg_2'].as_csv()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "67bfbeb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "49123a5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_table = pd.read_html(results_dict_1['reg_2'], header=0, index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "6a81721d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results_table[0].to_markdown(buf=\"C:/Users/zach_/Nobackupfile/Data/BDS/test.md\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f3affd7",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2498,6 +2513,12 @@
    "source": [
     "print(results_dict_1['reg_3'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee6a8474",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2778,6 +2799,12 @@
     "\n",
     "print(results_table)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a6934b2",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3381,8 +3408,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4e1d3ace",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: cookiecutter in c:\\users\\zach_\\anaconda3\\lib\\site-packages (1.7.2)\n",
+      "Requirement already satisfied: binaryornot>=0.4.4 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from cookiecutter) (0.4.4)\n",
+      "Requirement already satisfied: MarkupSafe<2.0.0 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from cookiecutter) (1.1.1)\n",
+      "Requirement already satisfied: six>=1.10 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from cookiecutter) (1.16.0)\n",
+      "Requirement already satisfied: jinja2-time>=0.2.0 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from cookiecutter) (0.2.0)\n",
+      "Requirement already satisfied: python-slugify>=4.0.0 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from cookiecutter) (5.0.2)\n",
+      "Requirement already satisfied: poyo>=0.5.0 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from cookiecutter) (0.5.0)\n",
+      "Requirement already satisfied: requests>=2.23.0 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from cookiecutter) (2.26.0)\n",
+      "Requirement already satisfied: Jinja2<3.0.0 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from cookiecutter) (2.11.3)\n",
+      "Requirement already satisfied: click>=7.0 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from cookiecutter) (8.0.3)\n",
+      "Requirement already satisfied: chardet>=3.0.2 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from binaryornot>=0.4.4->cookiecutter) (4.0.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from click>=7.0->cookiecutter) (0.4.4)\n",
+      "Requirement already satisfied: arrow in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from jinja2-time>=0.2.0->cookiecutter) (0.13.1)\n",
+      "Requirement already satisfied: text-unidecode>=1.3 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from python-slugify>=4.0.0->cookiecutter) (1.3)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from requests>=2.23.0->cookiecutter) (3.2)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from requests>=2.23.0->cookiecutter) (2021.10.8)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from requests>=2.23.0->cookiecutter) (2.0.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from requests>=2.23.0->cookiecutter) (1.26.7)\n",
+      "Requirement already satisfied: python-dateutil in c:\\users\\zach_\\anaconda3\\lib\\site-packages (from arrow->jinja2-time>=0.2.0->cookiecutter) (2.8.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: You are using pip version 22.0.4; however, version 22.1 is available.\n",
+      "You should consider upgrading via the 'c:\\Users\\zach_\\anaconda3\\python.exe -m pip install --upgrade pip' command.\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ff681b8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3390,10 +3460,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "107ca7f961881f4bce22933cd4df563a066a1e542a56ccb91c5522b9aacf0be6"
+   "hash": "44599b0862bddee82dc23b9f63c3260e42dbe4d929625556e76cc4b2957ef2fe"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 ('base')",
+   "display_name": "Python 3.10.4 ('RFE_project-5yjSZlxr')",
    "language": "python",
    "name": "python3"
   },
@@ -3407,7 +3477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
