Added average regulation effects
- Added the effects of average regulation on life path on firm exit rates

--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,18 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "WindowsPath('C:/Users/zach_/Nobackupfile/Data/BDS')"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\zach_\\Desktop\\Research\\Github\\RFE_project\\notebooks\\test.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/zach_/Desktop/Research/Github/RFE_project/notebooks/test.ipynb#ch0000002?line=0'>1</a>\u001b[0m data_file_path \u001b[39m=\u001b[39m Path(config[\u001b[39m\"\u001b[39;49m\u001b[39mdata\u001b[39;49m\u001b[39m\"\u001b[39;49m][\u001b[39m\"\u001b[39m\u001b[39mdata_file_path\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/zach_/Desktop/Research/Github/RFE_project/notebooks/test.ipynb#ch0000002?line=1'>2</a>\u001b[0m regdata_path \u001b[39m=\u001b[39m Path(config[\u001b[39m\"\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m\"\u001b[39m][\u001b[39m\"\u001b[39m\u001b[39mregdata_path\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/zach_/Desktop/Research/Github/RFE_project/notebooks/test.ipynb#ch0000002?line=2'>3</a>\u001b[0m data_file_path\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'data'"
+     ]
     }
    ],
    "source": [
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -62,179 +63,55 @@
        "'C:/Users/zach_/Nobackupfile/Data/BDS'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "config[\"data\"][\"data_file_path\"]"
+    "config[\"make_data\"][\"data_file_path\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>industry_description</th>\n",
-       "      <th>NAICS</th>\n",
-       "      <th>industry_restrictions_1_0</th>\n",
-       "      <th>industry_restrictions_2_0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1970</td>\n",
-       "      <td>Agriculture Forestry Fishing and Hunting</td>\n",
-       "      <td>11</td>\n",
-       "      <td>26906.195560</td>\n",
-       "      <td>28824.355770</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1970</td>\n",
-       "      <td>Mining Quarrying and Oil and Gas Extraction</td>\n",
-       "      <td>21</td>\n",
-       "      <td>2796.801590</td>\n",
-       "      <td>2890.725190</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1970</td>\n",
-       "      <td>Utilities</td>\n",
-       "      <td>22</td>\n",
-       "      <td>4070.888044</td>\n",
-       "      <td>4252.365643</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1970</td>\n",
-       "      <td>Manufacturing</td>\n",
-       "      <td>31</td>\n",
-       "      <td>41761.877750</td>\n",
-       "      <td>47270.819550</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1970</td>\n",
-       "      <td>Wholesale Trade</td>\n",
-       "      <td>42</td>\n",
-       "      <td>995.916204</td>\n",
-       "      <td>1067.165504</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9787</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>Vocational Rehabilitation Services</td>\n",
-       "      <td>6243</td>\n",
-       "      <td>21813.640410</td>\n",
-       "      <td>27729.388010</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9788</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>Museums Historical Sites and Similar Institutions</td>\n",
-       "      <td>7121</td>\n",
-       "      <td>19275.208430</td>\n",
-       "      <td>24111.798400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9789</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>Other Amusement and Recreation Industries</td>\n",
-       "      <td>7139</td>\n",
-       "      <td>746.758602</td>\n",
-       "      <td>917.126602</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9790</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>Religious Organizations</td>\n",
-       "      <td>8131</td>\n",
-       "      <td>20394.695870</td>\n",
-       "      <td>23728.867680</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9791</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>National Security and International Affairs</td>\n",
-       "      <td>9281</td>\n",
-       "      <td>14175.866100</td>\n",
-       "      <td>17051.138400</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9792 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      year                               industry_description  NAICS  \\\n",
-       "0     1970           Agriculture Forestry Fishing and Hunting     11   \n",
-       "1     1970        Mining Quarrying and Oil and Gas Extraction     21   \n",
-       "2     1970                                          Utilities     22   \n",
-       "3     1970                                      Manufacturing     31   \n",
-       "4     1970                                    Wholesale Trade     42   \n",
-       "...    ...                                                ...    ...   \n",
-       "9787  2020                 Vocational Rehabilitation Services   6243   \n",
-       "9788  2020  Museums Historical Sites and Similar Institutions   7121   \n",
-       "9789  2020          Other Amusement and Recreation Industries   7139   \n",
-       "9790  2020                           Religious Organizations    8131   \n",
-       "9791  2020       National Security and International Affairs    9281   \n",
-       "\n",
-       "      industry_restrictions_1_0  industry_restrictions_2_0  \n",
-       "0                  26906.195560               28824.355770  \n",
-       "1                   2796.801590                2890.725190  \n",
-       "2                   4070.888044                4252.365643  \n",
-       "3                  41761.877750               47270.819550  \n",
-       "4                    995.916204                1067.165504  \n",
-       "...                         ...                        ...  \n",
-       "9787               21813.640410               27729.388010  \n",
-       "9788               19275.208430               24111.798400  \n",
-       "9789                 746.758602                 917.126602  \n",
-       "9790               20394.695870               23728.867680  \n",
-       "9791               14175.866100               17051.138400  \n",
-       "\n",
-       "[9792 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'data_file_path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\zach_\\Desktop\\Research\\Github\\RFE_project\\notebooks\\test.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/zach_/Desktop/Research/Github/RFE_project/notebooks/test.ipynb#ch0000004?line=0'>1</a>\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(data_file_path\u001b[39m/\u001b[39mregdata_path)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'data_file_path' is not defined"
+     ]
     }
    ],
    "source": [
-    " pd.read_csv(data_file_path/regdata_path)"
+    "df = pd.read_csv(data_file_path/regdata_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\zach_\\Desktop\\Research\\Github\\RFE_project\\notebooks\\test.ipynb Cell 6'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/zach_/Desktop/Research/Github/RFE_project/notebooks/test.ipynb#ch0000014?line=0'>1</a>\u001b[0m df\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
