Added more robustness check
Added more robustness check
- separated average effects over life cycle to cohort and incumbent
- redo the above by age groups

--- a/notebooks/bds.ipynb
+++ b/notebooks/bds.ipynb
@@ -2378,7 +2378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 6,
    "id": "cc1d4be5",
    "metadata": {},
    "outputs": [
@@ -2388,7 +2388,7 @@
        "'\\n    results_as_html = res.summary.tables[1].as_html()\\n    results_table = pd.read_html(results_as_html, header=0, index_col=0)[0]\\n    file_name_curr = f\"reg_{naics_curr}\"\\n'"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2423,37 +2423,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 23,
    "id": "3d94ff3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cfint = results_dict_1['reg_2'].conf_int().to_numpy().T\n",
-    "mean =  results_dict_1['reg_2'].params.to_numpy().T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "id": "5ec6a78d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.09477244, -0.09494838, -0.09490208, -0.09504284, -0.0951339 ,\n",
-       "        -0.01083626, -0.01212111],\n",
-       "       [ 0.09477244,  0.09494838,  0.09490208,  0.09504284,  0.0951339 ,\n",
-       "         0.01083626,  0.01212111]])"
+       "-0.011749038092918015"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cfint - mean"
+    "results_dict_1['reg_2'].conf_int().loc[\"log_restriction_2_2_cohort\", \"lower\"]\n",
+    "results_dict_1['reg_2'].conf_int().loc[\"log_restriction_2_2_cohort\", \"upper\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5ec6a78d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict = {}"
    ]
   },
   {
